db settings changed

--- a/.env
+++ b/.env
@@ -1,5 +1,4 @@
-DB_NAME=task4db
-DB_USER=root
-DB_PASSWORD=root
-DB_HOST=localhost
-DB_PORT=3306
+DB_USER=b42ad34a5ce57f
+DB_PASSWORD=4d177b99
+DB_NAME=heroku_705a780a6e0e045 
+DB_HOST=us-cdbr-east-06.cleardb.net
