--- a/.env
+++ b/.env
@@ -1,4 +1,6 @@
-DB_USER=bf5075428cca3e
-DB_PASSWORD=077a21ee
-DB_NAME=heroku_e745be4bd331d0f
-DB_HOST=us-cdbr-east-06.cleardb.net
+DB_USER=tdjto9gv5u30x2ec
+DB_PASSWORD=f9l6vjt6lvhmykh4
+DB_NAME=r0j92zxzk3anjsc9
+DB_HOST=cwe1u6tjijexv3r6.cbetxkdyhwsb.us-east-1.rds.amazonaws.com
+
+
